# sapir

./: .gitignore  Cargo.toml  LICENSE  README.md  foundry.toml  hardhat.config.js  package.json  pnpm-lock.yaml
contracts/: BlinderPoly.sol  EqPoly.sol  FF.sol  Hyrax.sol  IPA.sol  Secq256k1.sol  SparseMLPoly.sol  SpartanVerifier.sol  SumCheck.sol  Transcript.sol  package.json
evm-verifier/: Cargo.toml  README.md  hardhat.config.js
evm-verifier/contracts/: Secq256k1.sol  SpartanVerifier.sol
evm-verifier/src/: lib.rs  secp256k1_test.rs  spartan_verifier_test.rs  utils.rs
spartan/: Cargo.toml  README.md
spartan/src/: lib.rs  r1cs.rs
spartan/src/frontend/: constraint_system.rs  mod.rs  test_utils.rs  wasm.rs
spartan/src/spartan/: commitment.rs  hyrax.rs  ipa.rs  mod.rs  utils.rs
spartan/src/spartan/polynomial/: ml_poly.rs
spartan/src/spartan/sumcheck/: mod.rs  sc_phase_1.rs  sumcheck.rs
src/: lib.rs  r1cs.rs  timer.rs  wasm.rs
src/evm_verifier/: mod.rs  secp256k1_test.rs  spartan_verifier_test.rs  utils.rs
src/frontend/: circuit.rs  constraint_system.rs  mod.rs  test_utils.rs  wasm.rs
src/frontend/gadgets/: bitops.rs  mod.rs  to_addr.rs  tree.rs
src/frontend/gadgets/ecc/: add.rs  double.rs  mod.rs  mul.rs
src/frontend/gadgets/ecc/twisted_edwards/: add.rs  mod.rs  mul.rs
src/frontend/gadgets/ecc/weierstrass/: add.rs  double.rs  mod.rs  mul.rs
src/frontend/gadgets/poseidon/: mod.rs  poseidon.rs  sponge.rs
src/spartan/: commitment.rs  hyrax.rs  ipa.rs  spartan.rs  transcript.rs  utils.rs
src/spartan/polynomial/: eq_poly.rs  ml_poly.rs  sparse_ml_poly.rs
src/spartan/sumcheck/: mod.rs  sc_phase_1.rs  sc_phase_2.rs  sumcheck.rs  unipoly.rs
