[package]
name = "spartan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3.64", features = ["console"] }
ark-std = "0.4.0"
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
ark-ff = { version = "0.4.2", features = ["std", "asm"] }
ark-serialize = "0.4.2"
rayon = { version = "1.7.0", optional = true }
ark-ec = { version = "0.4.2", features = ["rayon"] }
wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"
ark-secq256k1 = "0.4.0"
ark-secp256k1 = "0.4.0"
ethers = { version = "2.0", features = ["ethers-solc"], optional = true }
# Ethers' async features rely upon the Tokio async runtime.
tokio = { version = "1", features = ["macros"], optional = true }
# Flexible concrete Error Reporting type built on std::error::Error with customizable Reports
hex = "0.4.3"
num-bigint = "0.4.4"
poseidon = { git = "https://github.com/DanTehrani/poseidon.git" }

[features]
default = ["ark-std/print-trace"]
parallel = ["rayon"]
profiler = []
evm-verifier = ["ethers", "tokio"]
