[package]
name = "sapir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3.64", features = ["console"] }
ark-std = "0.4.0"
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
ark-ff = { version = "0.4.2", features = ["std", "asm"] }
ark-serialize = "0.4.2"
rayon = { version = "1.7.0", optional = true }
ark-ec = { version = "0.4.2", features = ["rayon"] }
wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"
hex = "0.4.3"
num-bigint = "0.4.4"
poseidon = { git = "https://github.com/personaelabs/poseidon.git" }
merkle-tree = { git = "https://github.com/personaelabs/merkle-tree.git" }
merlin = "3.0.0"

[dev-dependencies]
ark-secq256k1 = "0.4.0"
ark-secp256k1 = "0.4.0"

[features]
default = ["ark-std/print-trace"]
parallel = ["rayon"]
profiler = []
