[package]
name = "spartan-evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ethers = { version = "2.0", features = ["ethers-solc"] }
# Ethers' async features rely upon the Tokio async runtime.
tokio = { version = "1", features = ["macros"] }
# Flexible concrete Error Reporting type built on std::error::Error with customizable Reports
eyre = "0.6"
spartan = { path = "../spartan" }
ark-std = "0.4.0"
wasm-bindgen = "0.2.87"

[features]
default = ["ark-std/print-trace"]
